🐛 Fixed a bug that the bottom of the .menu is not visible on mobile

--- a/style.css
+++ b/style.css
@@ -635,7 +635,6 @@ address {
   left: 0;
   z-index: 2000;
   width: 100%;
-  height: 100vh;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.92);
   visibility: hidden;
@@ -648,7 +647,7 @@ address {
   .menu * {
     color: #fff; }
   .menu .menu-contents {
-    padding: 110px 40px 0; }
+    padding: 110px 40px 50px; }
   .menu-nav, .menu-util {
     margin-bottom: 62px; }
   .menu-nav-item:not(:last-child) {
@@ -681,7 +680,6 @@ address {
     letter-spacing: 0.3px;
     text-transform: uppercase; }
   .menu-footer {
-    margin-bottom: 50px;
     font-size: 11px;
     font-weight: 900;
     line-height: 1.36em;
